--- a/public/frontend/css/my.css
+++ b/public/frontend/css/my.css
@@ -10,3 +10,9 @@
     background: linear-gradient(90deg, #fff6f5 0.18%, #ffff 100.18%);
     padding: 40px 60px 40px 30px;
 }
+
+.footer-copyright {
+    border-top: 1px solid var(--dark-divider-color);
+    padding: 28px 0;
+    margin-top: 60px;
+}
