--- a/public/frontend/css/my.css
+++ b/public/frontend/css/my.css
@@ -112,3 +112,86 @@
     text-transform: capitalize;
     transition: all 0.3s ease-in-out;
 }
+
+/* Popup Overlay */
+.promo-popup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.65);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 99999;
+}
+
+/* Popup Box */
+
+/* Logo Styling */
+.popup-logo {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 15px;
+}
+
+.popup-logo img {
+    width: 160px;
+    height: auto;
+    object-fit: contain;
+}
+
+
+.promo-popup {
+    background: #fff;
+    width: 90%;
+    max-width: 420px;
+    padding: 35px 30px;
+    border-radius: 20px;
+    text-align: center;
+    position: relative;
+    animation: popupZoom 0.35s ease-in-out;
+    box-shadow: 0 15px 40px rgba(0, 0, 0, 0.2);
+}
+
+/* Title */
+.promo-popup h2 {
+    font-size: 28px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+/* Description */
+.promo-popup p {
+    font-size: 16px;
+    margin-bottom: 20px;
+}
+
+/* Close Button */
+.close-popup {
+    position: absolute;
+    top: 12px;
+    right: 15px;
+    font-size: 28px;
+    cursor: pointer;
+    color: #333;
+    transition: 0.2s;
+}
+
+.close-popup:hover {
+    color: #e60000;
+}
+
+/* Animation */
+@keyframes popupZoom {
+    0% {
+        transform: scale(0.5);
+        opacity: 0;
+    }
+
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
