--- a/public/frontend/css/my.css
+++ b/public/frontend/css/my.css
@@ -6,12 +6,26 @@
     padding: 150px 0 140px;
 }
 
+/* Desktop (Default) */
 .section-title h1 {
-    font-size: 70px;
+    font-size: 68px;
     font-weight: 800;
     text-transform: uppercase;
     margin-bottom: 0;
     cursor: none;
+}
+
+/* Mobile */
+@media only screen and (max-width: 767px) {
+    .section-title h1 {
+        font-size: 54px;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    .what-we-counter-item {
+        padding: 12px;
+    }
 }
 
 .heightlite {
